; ModuleID = '/home/carl/AnghaBench/openssl/crypto/x509/extr_v3_conf.c_X509V3_EXT_nconf_nid.c'
source_filename = "/home/carl/AnghaBench/openssl/crypto/x509/extr_v3_conf.c_X509V3_EXT_nconf_nid.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32* @X509V3_EXT_nconf_nid(i32* %0, i32* %1, i32 %2, i8* %3) #0 {
  %5 = alloca i32*, align 8
  %6 = alloca i32*, align 8
  %7 = alloca i32*, align 8
  %8 = alloca i32, align 4
  %9 = alloca i8*, align 8
  %10 = alloca i32, align 4
  %11 = alloca i32, align 4
  store i32* %0, i32** %6, align 8
  store i32* %1, i32** %7, align 8
  store i32 %2, i32* %8, align 4
  store i8* %3, i8** %9, align 8
  %12 = call i32 @v3_check_critical(i8** %9)
  store i32 %12, i32* %10, align 4
  %13 = call i32 @v3_check_generic(i8** %9)
  store i32 %13, i32* %11, align 4
  %14 = icmp ne i32 %13, 0
  br i1 %14, label %15, label %23

15:                                               ; preds = %4
  %16 = load i32, i32* %8, align 4
  %17 = call i32 @OBJ_nid2sn(i32 %16)
  %18 = load i8*, i8** %9, align 8
  %19 = load i32, i32* %10, align 4
  %20 = load i32, i32* %11, align 4
  %21 = load i32*, i32** %7, align 8
  %22 = call i32* @v3_generic_extension(i32 %17, i8* %18, i32 %19, i32 %20, i32* %21)
  store i32* %22, i32** %5, align 8
  br label %30

23:                                               ; preds = %4
  %24 = load i32*, i32** %6, align 8
  %25 = load i32*, i32** %7, align 8
  %26 = load i32, i32* %8, align 4
  %27 = load i32, i32* %10, align 4
  %28 = load i8*, i8** %9, align 8
  %29 = call i32* @do_ext_nconf(i32* %24, i32* %25, i32 %26, i32 %27, i8* %28)
  store i32* %29, i32** %5, align 8
  br label %30

30:                                               ; preds = %23, %15
  %31 = load i32*, i32** %5, align 8
  ret i32* %31
}

declare dso_local i32 @v3_check_critical(i8**) #1

declare dso_local i32 @v3_check_generic(i8**) #1

declare dso_local i32* @v3_generic_extension(i32, i8*, i32, i32, i32*) #1

declare dso_local i32 @OBJ_nid2sn(i32) #1

declare dso_local i32* @do_ext_nconf(i32*, i32*, i32, i32, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
